# pyrosense

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
configs/: stacking.yaml
docs/: CHANGELOG.md  CONTRIBUTING.md  data_download.md  installation.md  project_structure.md
notebooks/: 01_prithvi_value_test.ipynb
scripts/: download_mesogeos.py  download_nofire_hls.py
src/pyrosense/: __init__.py
src/pyrosense/cli/: __init__.py  main.py
src/pyrosense/evaluation/: __init__.py  metrics.py
src/pyrosense/features/: __init__.py  alphaearth.py  base.py  prithvi.py  store.py  weather.py
src/pyrosense/models/: __init__.py  classifiers.py  optimization.py  stacking.py
src/pyrosense/vlm/: __init__.py  earthdial.py  image_utils.py  prompts.py
